--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "mkcert": "^3.2.0",
     "mongoose": "^8.3.5",
     "nodemon": "^3.1.0",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "uuid": "^10.0.0"
   }
 }
