backend for login and signup added

--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,6 @@ BACKEND_PORT=8000
 FRONTEND_PORT=3000
 CORS_ORIGIN=*
 SOCKET_TOKEN_SECRET=yasir@129
-
+MONGO_DB_URL=
+FRONTEND_URL=http://localhost:3000/
+FORGOTPASSWORD_JWT_SECRET=r$*_$!!ks%3rt4*ebh&ss:.,f,&&TSV
