--- a/client1/.env
+++ b/client1/.env
@@ -1,3 +1,4 @@
 //append your variable with REACT_APP in order for react to locate them
 REACT_APP_BACKEND_PORT=8000
 REACT_APP_FRONTEND_PORT=3000
+REACT_APP_BACKEND_URL=https://localhost:8000
