--- a/server/.env
+++ b/server/.env
@@ -2,6 +2,12 @@ BACKEND_PORT=8000
 FRONTEND_PORT=3000
 CORS_ORIGIN=*
 SOCKET_TOKEN_SECRET=yasir@129
-MONGO_DB_URL=
-FRONTEND_URL=http://localhost:3000/
+MONGO_DB_URL=mongodb://127.0.0.1:27017/videoCallingApp
+FRONTEND_URL=https://localhost:3000
 FORGOTPASSWORD_JWT_SECRET=r$*_$!!ks%3rt4*ebh&ss:.,f,&&TSV
+ACCESS_TOKEN_SECRET=savd78234233$$y3bj32j
+ACCESS_TOKEN_EXPIRY=1d
+
+CLOUDINARY_CLOUD_NAME=dwcp4rejp
+CLOUDINARY_API_KEY=558694893568932
+CLOUDINARY_API_SECRET=KE1k-0ddmS4f69DB5nRuzkSzpow
