--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -17,6 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mkcert": "^3.2.0",
     "mongoose": "^8.3.5",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
