front and backend linked with fetures of shedule appointment etc

--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,8 @@ FRONTEND_PORT=3000
 
 CORS_ORIGIN=*
 
-MONGO_DB_URL=mongodb://127.0.0.1:27017/videoCallingApp
+# MONGO_DB_URL=mongodb://127.0.0.1:27017/videoCallingApp
+MONGO_DB_URL = mongodb+srv://PCellUser:e4zJHVP6Xe3vJBPt@pcell.scf3wiq.mongodb.net/VideoCallingApp
 FRONTEND_URL=https://localhost:3000
 
 SOCKET_TOKEN_SECRET=yasir@129
@@ -14,3 +15,5 @@ ACCESS_TOKEN_EXPIRY=1d
 CLOUDINARY_CLOUD_NAME=dwcp4rejp
 CLOUDINARY_API_KEY=558694893568932
 CLOUDINARY_API_SECRET=KE1k-0ddmS4f69DB5nRuzkSzpow
+
+
